# mgtv

./: .env.example  .gitignore  AGENTS.md  README.md  mgtv.m3u  mgtv.xml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: main.yaml  update-channels.yml
docs/plans/: 2026-04-04-mgtv-improvement-design.md
docs/superpowers/plans/: 2026-04-05-mgtv-proxy-plan.md
docs/superpowers/specs/: 2026-04-05-mgtv-proxy-design.md
m3u8/: 218.m3u8  229.m3u8  230.m3u8  254.m3u8  261.m3u8  267.m3u8  269.m3u8  280.m3u8  287.m3u8  316.m3u8  344.m3u8  346.m3u8  484.m3u8  cctv1.m3u8  cctv13.m3u8  cctv2.m3u8  cctv5.m3u8  hn01.m3u8  hn02.m3u8  hn03.m3u8  hn04.m3u8  hn05.m3u8  hn06.m3u8  hn07.m3u8  hn08.m3u8  hn09.m3u8  hn10.m3u8  hn11.m3u8  hn12.m3u8  hn13.m3u8  hn14.m3u8  hn15.m3u8
scripts/: fetch_channels.py  update_channels.py
src/: __init__.py  channels.json  config.py  fetcher.py  m3u8_generator.py  m3u_generator.py  proxy.py  server.py  tunnel.py
src/api/: __init__.py  client.py  epg.py  fetcher.py
src/generator/: __init__.py  epg.py  m3u.py
src/proxy/: __init__.py  relay.py  routes.py
src/utils/: generate_mgtv_m3u8.py  update_url.py
tests/: test_config.py  test_fetcher.py  test_generator.py  test_m3u_generator.py  test_proxy.py  test_proxy_layer.py  test_tunnel.py
