[project]
name = "mgtv"
version = "1.0.0"
description = "芒果 TV 湖南地方台直播源自动刷新工具"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = false
