[project]
name = "mgtv"
version = "2.0.0"
description = "芒果 TV 直播源 proxy（HTTP FLV 中转 + Cloudflare Tunnel）"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = false
